<resources>
    <string name="app_name">MyBook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_general_part">Загальна частина</string>
    <string name="menu_zmiev2">ПЛ-330 кВ Зміїв №2</string>
    <string name="menu_lozova">ПЛ-330 кВ Лозова</string>
    <string name="menu_tn330z">ТН-330 кВ ПЛ-330 кВ Зміїв №2</string>
    <string name="general_part">" Загальна частина.&#10;         1.1 У цій інструкції наведено вказівки щодо обслуговування та оперативного управління              пристроями релейного захисту та місцевої електроавтоматики. В інструкції наведено вказівки              за методами контролю справності пристроїв релейного захисту та електроавтоматики \"РЗА\",              здійснюваним оперативним персоналом, його діям при аварійному спрацьовуванні та              несправності цих пристроїв.&#10;         1.2 Положення всіх перемикаючих пристроїв (накладок, випробувальних блоків, ключів, автоматів              оперативного струму і т.д.), вказані в Таблицях положення перемикаючих пристроїв (ТППУ).&#10;         1.3 Інструкцію складено на підставі \"Інструкції з обслуговування пристроїв РЗА для оперативного              персоналу\" ДКД 34.35.501-93, \"Правил технічного обслуговування релейного захисту,              протиаварійної автоматики, дистанційного керування та сигналізації електричних станцій та              підстанцій 110-750 кВ\" ДКД 34.35.604-96, \"Типової інструкції з організації та виробництва              робіт у пристроях РЗА електричних станцій та підстанцій\" РД 34.35.302-90.&#10;         1.4 Ця інструкція призначена для диспетчерського персоналу Харківського РЦОМ, оперативного              персоналу та персоналу ВЕРЗтаПА підстанції 330 кВ «Степова».&#10;         1.5 Загальні принципи дії захисту, автоматики та ПА, вказівки щодо їх обслуговування вказані в              «Інструкції з оперативного обслуговування пристроїв РЗА СТУОМ» та «Інструкції з              оперативного обслуговування пристроїв протиаварійної автоматики СТУОМ».&#10;         1.6 Вказівки з експлуатації та дій ОПП при несправностях апаратури ТО-ТУ вказані в              «Інструкції з оперативного обслуговування ВЧ каналів релейного захисту та протиаварійного              Автоматики», організованих апаратурою АПК \"Оріон\", “Калина”, АКА-16 \"Кедр\".&#10;         1.7 Уставки спрацьовування пристроїв РЗА вказані в карті уставок РЗА ПС.&#10;         1.8 При перемиканнях у первинних схемах оперативний персонал зобов'язаний виконувати необхідні              операції у схемах РЗА, керуючись вказівками інструкцій ДП-6 «З виробництва              оперативних перемикань на ПС СТУОМ» та данною інструкцією з обслуговування              пристроїв РЗА ПС.&#10;         1.9 Послідовність операцій на первинних схемах має бути узгоджена з операціями в              вторинних ланцюгах та записана у програми або б/п.&#10;         1.10 Загальні вимоги щодо оперативного обслуговування ПРЗА 330 кВ&#10;         1.10.1 При виведенні в «Ремонт» ПВ 330 кВ на включеній в роботу ПЛ 330 кВ необхідно:             - вивести його струмові ланцюги з основних та резервних захистів, ДЗОШ, ПРВВ 330 кВ.             - зняти вихідні дії ПРЗА, що діють на відключення даного вимикача, оперативним ланцюгам.             - відключити автомати живлення оперативного струму ПВ, вивести всі види АПВ.&#10;         1.10.2 При виведенні захисту в першу чергу необхідно зняти накладки пуску ПРВВ, потім зняти                  накладки вимкнення.                  При введенні ПРЗА в роботу з перевіркою відсутності «+» потенціалу в першу чергу накласти                  накладки відключення, потім ввести накладки пуск ПРВВ.&#10;         1.10.3 Якщо виконувались роботи з технічного обслуговування ПРЗА в струмових ланцюгах або                  маніпуляції з струмовими блоками основних або резервних захистів ПЛ, то після введення захистів                  до роботи, необхідно перевірити обтікання струмових ланцюгів приладом ВАФ під навантаженням                  (виконує персонал РЗА), а ДФЗ додатково виконати обмін в/ч сигналами."</string>
    <string name="menu_ret6701k">RET670 1k</string>
    <string name="tt2at_image_desc">ТТ2АТ_1</string>
    <string name="tt2at_image2_desc">ТТ2АТ_2</string>
    <string name="at2general">AT2GENERAL</string>
    <string name="menu_at2general">Панелі РЗА і ТС</string>
    <string name="tn330z_part">"     2.3.1.1 У нормальному режимі від ТН 330 кВ «Змиев ТЭС №2» одержують напругу:&#10;     - ланцюги напруги основних та резервних захист ПЛ 330 кВ «Змиев ТЭС №2»;&#10;     - ланцюги контролю ТАПВ ПЛ 330 кВ «Змиев ТЭС №2» – КОНл; та КС (КС від ТН ПЛ Змиев ТЭС№2 та ТН ПЛ Лозова);&#10;     - ланцюги напруги 330 кВ захистів 2АТ (ДЗ 330 кВ та СЗНП 330 кВ);&#10;     - ланцюги напруги синхронізації 2ВВ 330 кВ;&#10;     - ланцюги напруги ЗНРл (3U0, U2);&#10;     - ланцюги напруги ПАК «Рекон №1»;&#10;     - ланцюги вимірювання та обліку е-е;&#10;     - ланцюги напруги перетворювачів потужності ТІ;&#10;     - ланцюги контролю напруги для ДЗОШ-330.&#10;     2.3.1.2 Оперативні вказівки:&#10;     а) для ланцюгів напруги пристроїв РЗА ПЛ 330 кВ «Змиев ТЭС №2» резервним є ТН 330 кВ ПЛ 330 кВ «Лозовая»;&#10;     б) при переведенні ланцюгів напруги на ТН 330 кВ «Лозовая» вивести ТАПВ з КОНл (накладка Н3 на пн.81);&#10;     в) при виведенні ТН 330 кВ «Змиев ТЭС №2», втрачаються функції синхронізації 2ВВ та заборони БАПВ від ЗНРл;&#10;     г) ключі П1, П2 переведення ланцюгів напруги на ТН 330 кВ Лозова розташовані на пн.102;&#10;     д) щоденний вимір небалансу 3Uо виконувати при натиснутій кнопці КС-«Небаланс 3Uо ТН 330 кВ Змиев ТЭС №2» на пн.86 (лів.ст.) (Норма 3U про нб &lt;3В);&#10;     е) при відключенні одного з автоматів вторинних ланцюгів у шафі ТН 330 кВ на ВРП, спрацює попереджувальна звукова та світлова сигналізація, на пн.№13 засвітиться табло «Несправность ТН 330 кВ Змиев ТЭС №2», при цьому необхідно терміново включити цей автомат, при неможливості його повторного включення, необхідно повідомити персоналу ВЕРЗтаПА. При несправності в ланцюгах напруги ТН 330 кВ у ПМ «Діамант» автоматично виводиться з роботи ДЗ та вводиться МСЗ;&#10;     ж) контроль наявності лінійної напруги на ПЛ 330кВ «Змиев ТЭС №2» здійснюється з допомогою кіловольтметра та перемикача ПІ «ТН 330кВ Змиев ТЭС» на пн. №13. &#10; 2.3.3 Схема контролю ланцюгів напруги 3U0 у ТН 330 кВ.&#10;     На панелях організації ланцюгів напруги ТН 330 кВ №94 (ПЛ-330 «Лозовая») №86 (ПЛ-330кВ «Змиев ТЭС №2») є схема контролю ланцюгів напруги 3Uo.&#10;     До її складу входить: кнопка виміру небалансу та міліамперметр мА. Рівень нормального небалансу 3Uo становить &lt; 3 В. Контроль 3Uo здійснюється ОПП щодня, а також релейним персоналом за характерними пусками ПАК «Рекон». Наявність завищеного чи хаотично змінного небалансу 3Uo свідчить про несправність у вторинних ланцюгах ТН або пошкодження силової частини обмоток самого ТН. При цьому необхідно терміново вивести ТН 330 кВ із роботи. Величину напруги 3Uo можна перевірити на панелях захисту «Діамант» відповідного приєднання. (Див. розділ №19).&#10;     2.3.4 Сигналізація.&#10;     За будь-яких несправностей ТН-330кВ:&#10;     • На пн.101 ПМ «Діамант» ПЛ «Змиев ТЭС №2» випадає блінкер 3РУ «Обрив цепей напряжени» та пуск ПАК «Рекон» ПЛ «Змиев ТЭС №2».&#10;     • На пн.93 резервних захисту ПЛ Лозова на ПМ «Діамант» засвічується світлодіод КЦН та пуск ПАК «Рекон» ПЛ «Лозовая».&#10;     Про характер несправності можна прочитати в меню «События» ПМ «Діамант».&#10;     При відключенні будь-якого автомата в шафі ТН-330кВ спрацьовує звукова попереджувальна сигналізація та загоряється табло на пн.13 «Неисправность ТН-330кВ Змиев ТЭС №2» або «Неисправность ТН-330кВ Лозовая».  "</string>
    <string name="menu_tn330l">ТН-330 кВ ПЛ-330 кВ Лозова</string>
    <string name="tn330_part">"     2.3 ТРАНСФОРМАТОР НАПРУГИ 330 кВ&#10;     ТН 330 кВ підключені безпосередньо до ліній (без роз\'єднувачів).&#10;     Виведення в ремонт можливе тільки спільно з ПЛ 330 кВ.&#10;     Вторинні обмотки ТН захищені автоматами, встановленими у шафах ТН на ВРУ-330 кВ.&#10;     Номінальна вторинна напруга ТН-330 кВ становить 100 В (лінійні) та 57 В (фазні). "</string>
    <string name="tn330z_image_desc">TN330Z</string>
    <string name="tn330l_image_desc">TN330L</string>
    <string name="tn330l_part">"     2.3.2.1 У нормальному режимі від ТН 330 кВ ПЛ «Лозовая» отримують напругу:&#10;     - ланцюги напруги основних, резервних захистів та АЛАР ПЛ 330 кВ «Лозовая»;&#10;     - ланцюги контролю ТАПВ ПЛ «Лозовая» - КОНл; КС (КС від ТН ПЛ «Лозовая» та ТН ПЛ «Змиев ТЭС№2»);&#10;     - Ланцюги напруги синхронізації «2ВВ»;&#10;     - Ланцюги напруги ЗНРл;&#10;     - Ланцюги напруги ПАК «Рекон №2»;&#10;     - Ланцюги вимірювання та обліку е-е;&#10;     - Ланцюги напруги перетворювачів потужності ТВ.&#10;     2.3.2.2 Оперативні вказівки:&#10;     а) для ланцюгів напруги пристроїв РЗА ВЛ 330 кВ «Лозовая» резервним є ТН 330 кВ ПЛ «Змиев ТЭС №2»;&#10;     б) при переведенні ланцюгів напруги на ТН «Змиев ТЭС №2» вивести ТАПВ з КОНл (накладка Н2 на пн.81);&#10;     в) при виведенні ТН 330 кВ Лозова втрачаються функції синхронізації «2ВВ» та заборони БАПВ від ЗНРл;&#10;     г) ключі П1, П2 переведення ланцюгів напруги на резервний ТН 330 кВ «Змиев ТЭС №2» розташовані на пн.95;&#10;     д) вимірювання небалансу 3Uо виконувати при натиснутій кнопці К1-«Небаланс 3Uо ТН-330кВ Лозовая» на пн.94. (Норма 3U нб &lt;3В);&#10;     е) при відключенні одного з автоматів вторинних ланцюгів у шафі ТН 330 кВ на ВРП, спрацює попереджувальна звукова та світлова сигналізація, на пн. №13 засвітиться табло «Неисправность ТН 330 кВ Лозовая», при цьому необхідно терміново включити автомат, що відключився, при неможливості його повторного включення необхідно повідомити персоналу ВЕРЗтаПА. При несправності в ланцюгах напруги ТН 330 кВ у ПМ «Діамант» автоматично виводиться з роботи ДЗ та вводиться МСЗ;&#10;     ж) контроль наявності напруги на ПЛ 330кВ «Лозовая» здійснюється за допомогою кіловольтметра та перемикача ПІ «ТН 330кВ Лозовая» на пн. №13. За допомогою перемикача контролюється лінійна напруга.&#10;     2.3.3 Схема контролю ланцюгів напруги 3U0 у ТН 330 кВ.&#10;     На панелях організації ланцюгів напруги ТН 330 кВ №94 (ПЛ-330 «Лозовая») №86 (ПЛ-330кВ «Змиев ТЭС №2») є схема контролю ланцюгів напруги 3Uo.&#10;     До її складу входить: кнопка виміру небалансу та міліамперметр мА. Рівень нормального небалансу 3Uo становить &lt; 3 В. Контроль 3Uo здійснюється ОПП щодня, а також релейним персоналом за характерними пусками ПАК «Рекон». Наявність завищеного чи хаотично змінного небалансу 3Uo свідчить про несправність у вторинних ланцюгах ТН або пошкодження силової частини обмоток самого ТН. При цьому необхідно терміново вивести ТН 330 кВ із роботи. Величину напруги 3Uo можна перевірити на панелях захисту «Діамант» відповідного приєднання. (Див. розділ №19).&#10;     2.3.4 Сигналізація.&#10;     За будь-яких несправностей ТН-330кВ:&#10;     • На пн.101 ПМ «Діамант» ПЛ «Змиев ТЭС №2» випадає блінкер 3РУ «Обрив цепей напряжени» та пуск ПАК «Рекон» ПЛ «Змиев ТЭС №2».&#10;     • На пн.93 резервних захисту ПЛ Лозова на ПМ «Діамант» засвічується світлодіод КЦН та пуск ПАК «Рекон» ПЛ «Лозовая».&#10;     Про характер несправності можна прочитати в меню «События» ПМ «Діамант».&#10;     При відключенні будь-якого автомата в шафі ТН-330кВ спрацьовує звукова попереджувальна сигналізація та загоряється табло на пн.13 «Неисправность ТН-330кВ Змиев ТЭС №2» або «Неисправность ТН-330кВ Лозовая». "</string>
</resources>